--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,6 +9,9 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  font-family: 'Lato', sans-serif;
+  color: #2d3c49;
+  font-weight: 300;
 }
 
 /* Responsive: Portrait tablets and up */
