--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,6 +14,23 @@ body {
   font-weight: 300;
 }
 
+text-muted {
+  font-weight: 100;
+}
+
+text-light {
+  color: #7d97ad;
+}
+
+p {
+  font-family: Catamaran, sans-serif;
+  font-weight: 400;
+}
+
+hr {
+  height: 2px;
+  background-color: #7d97ad;
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 992px) {
   .container {
