--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -28,6 +28,9 @@ h4 {
   font: 600 16px Catamaran, sans-serif;
 }
 
+#featured-work h3 {
+  font-weight: 600;
+}
 
 p {
   font: 400 16px Catamaran, sans-serif;
